--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,10 @@ def allureVersion = '2.17.2',
     retrofit2Version = '2.9.0',
     loggingInterceptorVersion = '4.9.3',
     kotlinFakerjVersion = '1.8.0',
-    jvmTarget = '1.8'
+    jvmTarget = '1.8',
+    selenide = '6.10.1',
+    klaxon = '5.6',
+    kluent = '1.72'
 
 dependencies {
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:$junitVersion")
@@ -33,6 +36,11 @@ dependencies {
     implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: log4jVersion
     implementation group: 'org.slf4j', name: 'jcl-over-slf4j', version: slf4jVersion
     implementation group: 'org.slf4j', name: 'slf4j-api', version: slf4jVersion
+    implementation group: 'com.codeborne', name: 'selenide', version: selenide
+    implementation group: 'org.amshove.kluent', name: 'kluent', version: kluent
+    // https://mvnrepository.com/artifact/com.beust/klaxon
+    implementation group: 'com.beust', name: 'klaxon', version: klaxon
+
     implementation(
             group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: '2.7.1-2',
             "org.projectlombok:lombok:$lombokVersion",
