--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation group: 'org.amshove.kluent', name: 'kluent', version: kluent
     // https://mvnrepository.com/artifact/com.beust/klaxon
     implementation group: 'com.beust', name: 'klaxon', version: klaxon
+    implementation group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: '2.7.1-2'
 
     implementation(
             group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: '2.7.1-2',
