--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,8 @@ def allureVersion = '2.17.2',
     selenide = '6.10.1',
     klaxon = '5.6',
     kluent = '1.72',
-    koin_version = "3.3.0"
+        koin_version = "3.3.0",
+        kotestVersion = "5.5.4"
 
 dependencies {
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:$junitVersion")
@@ -57,7 +58,9 @@ dependencies {
             // Koin Core features
             implementation("io.insert-koin:koin-core:$koin_version")
     // Koin Test features
-    testImplementation("io.insert-koin:koin-test-junit5:$koin_version")
+    implementation("io.insert-koin:koin-test-junit5:$koin_version")
+    implementation("io.kotest:kotest-assertions-core:$kotestVersion")
+    implementation("io.kotest:kotest-runner-junit5:$kotestVersion")
 
 
     implementation(
